--- a/media-manager/assets/css/app-main.css
+++ b/media-manager/assets/css/app-main.css
@@ -77,7 +77,7 @@ body { color: #666; background: #f5f5f5; padding-top: 100px; overflow: hidden;}
   color: #666;
   font-weight: 500;
 }
-.mm-wrapper .nav-sidebar > li > a > .ff-icon {opacity: .8; margin-right: 10px;}
+.mm-wrapper .nav-sidebar > li > a > .sb-icon {opacity: .8; margin-right: 10px;}
 .mm-wrapper .nav-sidebar > .active > a,
 .mm-wrapper .nav-sidebar > .active > a:hover,
 .mm-wrapper .nav-sidebar > .active > a:focus {
@@ -91,8 +91,8 @@ body { color: #666; background: #f5f5f5; padding-top: 100px; overflow: hidden;}
   position: absolute;
   right: 0;
   padding: 8px;
-  opacity: .5;
   pointer-events: none;
+  top: 1px;
 }
 .mm-wrapper .fancy-filter .form-control:focus {outline: none; box-shadow: none;}
 .mm-wrapper .fancy-filter .form-control:focus + .ff-icon {opacity: 1;}
