--- a/media-manager/assets/css/app-main.css
+++ b/media-manager/assets/css/app-main.css
@@ -27,12 +27,6 @@ html,
 body { padding: 0; margin: 0; font-family: 'Open Sans', 'Verdana', Helvetica, Arial, sans-serif; font-size: 1em;}
 body { color: #666; background: #f5f5f5; padding-top: 100px; overflow: hidden;}
 
-.mm-wrapper .navbar.navbar-fixed-top{
-  background: #fff;
-  min-height: 100px;
-}
-.mm-wrapper .navbar.navbar-fixed-top .btn-close { opacity: .5; }
-.mm-wrapper .navbar.navbar-fixed-top .btn-close:hover {opacity: 1;}
 
 .mm-wrapper .sidebar {
   position: fixed;
@@ -121,11 +115,19 @@ body { color: #666; background: #f5f5f5; padding-top: 100px; overflow: hidden;}
   box-shadow: inset 3px 0 0 #1784c7;
 }
 
+
+.mm-wrapper .navbar.navbar-fixed-top{ background: #fff; min-height: 100px; }
+.mm-wrapper .navbar.navbar-fixed-top .btn-close { opacity: .5; }
+.mm-wrapper .navbar.navbar-fixed-top .btn-close:hover {opacity: 1;}
+.mm-wrapper .navbar .navbar-nav > li > a {line-height: 1em;}
+
+
 .mm-wrapper .nav.nav-pushed-left { margin-right: 65px; }
 .mm-wrapper .btn-add {
   position: absolute;
   right: 25px;
   top: 70px;
+  cursor: pointer;
   background-color: #4285f4;
   border-radius: 100%;
   box-shadow: 0 1px 5px rgba(0,0,0,.28);
@@ -145,6 +147,8 @@ body { color: #666; background: #f5f5f5; padding-top: 100px; overflow: hidden;}
       -ms-transform: scale(1.1);
           transform: scale(1.1);
 }
+
+.mm-wrapper #mm-media-upload {width:0; height: 0; opacity: 0; overflow: hidden;}
 
 .mm-wrapper .fancy-filter {position: relative;}
 .mm-wrapper .fancy-filter .form-control{border: none; padding-right: 30px;}
@@ -315,4 +319,103 @@ body { color: #666; background: #f5f5f5; padding-top: 100px; overflow: hidden;}
 .mm-wrapper .drop-support p .btn-browse {
   cursor: pointer;
   border-bottom: 1px solid #6779a0;
+}
+
+.mm-wrapper #fileupload-cover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .7);
+  z-index: 1030;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: -webkit-transform 200ms ease,opacity 200ms ease;
+          transition: transform 200ms ease,opacity 200ms ease;
+
+  -webkit-transform: scale(.9);
+      -ms-transform: scale(.9);
+          transform: scale(.9);  
+}
+.mm-wrapper #fileupload-cover.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+
+
+.mm-wrapper #fileupload-cover .fu-progress{
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.47);
+  padding: 0;
+}
+.mm-wrapper #fileupload-cover .fu-progress .header-bar,
+.mm-wrapper #fileupload-cover .fu-progress .footer-bar {
+  position: absolute;
+  left: 0;
+  height: 50px;
+  width:100%;
+  z-index: 1;
+}
+.mm-wrapper #fileupload-cover .fu-progress .header-bar {
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  top:0;
+  box-shadow: 0 1px 2px rgba(43,59,93,.11),0 0 13px rgba(43,59,93,.09);
+}
+.mm-wrapper #fileupload-cover .fu-progress .footer-bar{
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  bottom: 0;
+  border-top: 1px solid #e5e5e5; 
+}
+.mm-wrapper #fileupload-cover .fu-progress .content-sec {
+  margin: 50px 0;
+  max-height: 284px;
+  overflow: auto;
+}
+.mm-wrapper #fileupload-cover .fu-progress .media {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+}
+.mm-wrapper #fileupload-cover .fu-progress .media .media-heading {\
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #5A5757;
+  letter-spacing: .8px;
+  font-size: 1.2em;
+  font-weight: 500;
+}
+.mm-wrapper #fileupload-cover .fu-progress .media .text-muted {
+  color: #999;
+  font-size: 12px;
+  letter-spacing: .8px;
+}
+.mm-wrapper #fileupload-cover .fu-progress .media .label {border-radius: 100px;}
+.mm-wrapper #fileupload-cover .fu-progress .media .media-left, 
+.mm-wrapper #fileupload-cover .fu-progress .media .media-body { 
+  z-index: 1; 
+  position: relative;
+}
+.mm-wrapper #fileupload-cover .fu-progress .media .fu-p-bar {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 0;
+  background: #f5f9ff;
+}
+.mm-wrapper #fileupload-cover .fu-progress .media:last-child {
+  border-bottom: none;
 }
