--- a/media-manager/views/app-main.html
+++ b/media-manager/views/app-main.html
@@ -45,6 +45,6 @@
 			</div>
 			
 		</div>
-		<div class="footer-bar"> <a href="" ng-click="fileupload.enabled = false"  ng-class="{'disabled': masterController.fileupload.filesCompleted !== masterController.fileupload.files.length}" class="btn btn-link">CLOSE</a> </div>
+		<div class="footer-bar"> <a href="" ng-click="masterController.fileupload.close()"  ng-class="{'disabled': masterController.fileupload.filesCompleted !== masterController.fileupload.files.length}" class="btn btn-link">CLOSE</a> </div>
 	</div>
 </div>	 
