--- a/mm-app/views/app-listing.html
+++ b/mm-app/views/app-listing.html
@@ -8,24 +8,22 @@
 
 <div class="media-listing">
 	
-	<div class="media-container" ng-show="mediaList.length">
+	<div class="media-container" ng-show="mediaList.length && !showLoading">
 		
 		<div class="row center-xs">
 			
-			<div class="col-xs-3 media-item" ng-repeat="item in mediaItems = (mediaList | filter:{'type': masterController.filter.type})" ng-class="{'item-selected': item.selected}">
+			<div class="col-xs-3 media-item" ng-repeat="item in mediaItems = (mediaList | filter:{'type': masterController.filter.type} | filter:{'name': masterController.filter.search.string})" ng-class="{'item-selected': item.selected}">
 				<div class="image"><img ng-src="{{item.url}}" alt=""></div>
 				<div class="text-muted text-left sub-info">{{item.width}} x {{item.height}} <span class="pull-right">{{item.ext}}</span></div>
 				<div class="overlay text-left">
 					<div class="checker big">
-						<input id="ccbx-{{item.id}}" type="checkbox" ng-click="selectItem(item)" value="{{item.id}}">
-						<label for="ccbx-{{item.id}}"></label>
+						<label ng-click="selectItem(item)" ng-class="{'is-set': item.selected}"></label>
 					</div>
 				</div>
 				<div class="info">
 					<div class="filename row">
 						<div class="col-xs-2 text-center icon icon-{{item.type}}"><i class="fa" ng-class="{ 'fa-image':item.type == 'image', 'fa-film':item.type == 'video', 'fa-file-code-o':item.type == 'page'}"></i></div>
 						<div class="col-xs-10 text-left text">{{item.name}}</div>
-						<span></span>
 					</div>
 				</div>
 			</div>
@@ -45,7 +43,17 @@
 	</div>
 
 	<div class="empty-filters" ng-if="showLoading">
-		<h1>Loading</h1>
+		<div class="sk-cube-grid">
+			<div class="sk-cube sk-cube1"></div>
+			<div class="sk-cube sk-cube2"></div>
+			<div class="sk-cube sk-cube3"></div>
+			<div class="sk-cube sk-cube4"></div>
+			<div class="sk-cube sk-cube5"></div>
+			<div class="sk-cube sk-cube6"></div>
+			<div class="sk-cube sk-cube7"></div>
+			<div class="sk-cube sk-cube8"></div>
+			<div class="sk-cube sk-cube9"></div>
+		</div>
 	</div>
 
 </div>
