Fix bug on form

--- a/mm-app/assets/css/less/app-main.less
+++ b/mm-app/assets/css/less/app-main.less
@@ -71,6 +71,16 @@ body {
 			&.nav-pushed-left { margin-right: 65px; }
 		}
 	}
+
+
+	#mm-media-upload {
+		width:0; 
+		height: 0; 
+		opacity: 0; 
+		overflow: hidden;
+		
+		&:focus {outline: none; box-shadow: none;}
+	}
 	
 }
 
