--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -1,4 +1,4 @@
-/*! media-manager 2016-02-25 */
+/*! media-manager 2016-02-26 */
 /* Open Sans @font-face kit */
 /* BEGIN Light */
 @font-face {
@@ -143,6 +143,16 @@ body {
 }
 .mm-wrapper .navbar .nav.nav-pushed-left {
   margin-right: 65px;
+}
+.mm-wrapper #mm-media-upload {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+}
+.mm-wrapper #mm-media-upload:focus {
+  outline: none;
+  box-shadow: none;
 }
 .mm-wrapper .main {
   -webkit-transition: width 200ms ease;
