--- a/mm-app/assets/css/app-main.css
+++ b/mm-app/assets/css/app-main.css
@@ -95,7 +95,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Open Sans', 'Verdana', Helvetica, Arial, sans-serif;
-  font-size: 1em;
+  font-size: 14px;
   background-color: #f5f5f5;
   color: #666;
   height: 100%;
@@ -140,19 +140,10 @@ body {
 }
 .mm-wrapper .navbar .navbar-nav > li > a .fa {
   margin-right: 5px;
+  font-size: 15px;
 }
 .mm-wrapper .navbar .nav.nav-pushed-left {
   margin-right: 65px;
-}
-.mm-wrapper #mm-media-upload {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  overflow: hidden;
-}
-.mm-wrapper #mm-media-upload:focus {
-  outline: none;
-  box-shadow: none;
 }
 .mm-wrapper .main {
   -webkit-transition: width 200ms ease;
@@ -185,6 +176,7 @@ body {
 .mm-wrapper .sidebar .nav-sidebar > li > a .sb-icon {
   opacity: .8;
   margin-right: 10px;
+  font-size: 15px;
 }
 .mm-wrapper .sidebar .nav-sidebar > li.active > a,
 .mm-wrapper .sidebar .nav-sidebar > li.active > a:hover,
@@ -782,4 +774,14 @@ body {
     -webkit-transform: scale3D(0, 0, 1);
             transform: scale3D(0, 0, 1);
   }
+}
+#mm-media-upload {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+}
+#mm-media-upload:focus {
+  outline: none;
+  box-shadow: none;
 }
