--- a/mm-app/assets/css/less/app-main.less
+++ b/mm-app/assets/css/less/app-main.less
@@ -9,7 +9,7 @@ html, body {
 	padding:0;
 	margin: 0;
 	font-family: 'Open Sans', 'Verdana', Helvetica, Arial, sans-serif;
-	font-size: 1em;
+	font-size: 14px;
 	background-color: #f5f5f5;
 	color: #666;
 	height: 100%;
@@ -62,7 +62,7 @@ body {
 				> a {
 					line-height: 1em;
 
-					.fa {margin-right: 5px;}
+					.fa {margin-right: 5px; font-size: 15px;}
 				}
 			}
 		}
@@ -73,14 +73,6 @@ body {
 	}
 
 
-	#mm-media-upload {
-		width:0; 
-		height: 0; 
-		opacity: 0; 
-		overflow: hidden;
-		
-		&:focus {outline: none; box-shadow: none;}
-	}
 	
 }
 
@@ -121,6 +113,7 @@ body {
 				  	.sb-icon {
 				  		opacity: .8; 
 				  		margin-right: 10px;
+				  		font-size: 15px;
 				  	}
 				}
 
@@ -752,4 +745,14 @@ body {
 	35% { 
 		transform: scale3D(0, 0, 1);
 	} 
+}
+
+//Upload Form
+#mm-media-upload {
+	width:0; 
+	height: 0; 
+	opacity: 0; 
+	overflow: hidden;
+	
+	&:focus {outline: none; box-shadow: none;}
 }
